--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
 .env
-__pycache__
-__pycache__/applyprocessing.cpython-312.pyc
-__pycache__/bma.cpython-312.pyc
-__pycache__/extraction.cpython-312.pyc
-__pycache__/querypre.cpython-312.pyc
-__pycache__/word2vec.cpython-312.pyc
+**/__pycache__/
